Added Statement of need.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -14,7 +14,7 @@
 }
 
 @INPROCEEDINGS{2019ICRC...36.1004S,
-       author = {{Schneider}, A.},
+       author = {{Schneider}, A. and {IceCube Collaboration}},
         title = "{Characterization of the Astrophysical Diffuse Neutrino Flux with IceCube High-Energy Starting Events}",
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Experiment},
     booktitle = {36th International Cosmic Ray Conference (ICRC2019)},
@@ -32,7 +32,7 @@ archivePrefix = {arXiv},
 }
 
 @INPROCEEDINGS{2019ICRC...36.1017S,
-       author = {{Stettner}, J.},
+       author = {{Stettner}, J. and {IceCube Collaboration}},
         title = "{Measurement of the diffuse astrophysical muon-neutrino spectrum with ten years of IceCube data}",
      keywords = {Astrophysics - High Energy Astrophysical Phenomena},
     booktitle = {36th International Cosmic Ray Conference (ICRC2019)},
