--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,19 +1,15 @@
-@article{PhysRevLett.125.121104,
+@article{IceCube:2020,
   title = {Characteristics of the Diffuse Astrophysical Electron and Tau Neutrino Flux with Six Years of IceCube High Energy Cascade Data},
-  author = {"IceCube Collaboration"},
+  author = {{IceCube Collaboration}},
   journal = {Phys. Rev. Lett.},
   volume = {125},
   issue = {12},
   pages = {121104},
   numpages = {10},
-  year = {2020},
-  month = {Sep},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.125.121104},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.125.121104}
+  year = {2020}
 }
 
-@INPROCEEDINGS{2019ICRC...36.1004S,
+@INPROCEEDINGS{IceCube:2019a,
        author = {{Schneider}, A. and {IceCube Collaboration}},
         title = "{Characterization of the Astrophysical Diffuse Neutrino Flux with IceCube High-Energy Starting Events}",
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Experiment},
@@ -26,12 +22,10 @@
         pages = {1004},
 archivePrefix = {arXiv},
        eprint = {1907.11266},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ICRC...36.1004S},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+ primaryClass = {astro-ph.HE}
 }
 
-@INPROCEEDINGS{2019ICRC...36.1017S,
+@INPROCEEDINGS{IceCube:2019b,
        author = {{Stettner}, J. and {IceCube Collaboration}},
         title = "{Measurement of the diffuse astrophysical muon-neutrino spectrum with ten years of IceCube data}",
      keywords = {Astrophysics - High Energy Astrophysical Phenomena},
@@ -44,8 +38,6 @@ archivePrefix = {arXiv},
         pages = {1017},
 archivePrefix = {arXiv},
        eprint = {1908.09551},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ICRC...36.1017S},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+ primaryClass = {astro-ph.HE}
 }
 
