Add citations. This is now complete.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,20 @@
-@article{IceCube:2020,
+@article{HAWCIceCube:2021,
+	doi = {10.3847/1538-4357/abcaa4},
+	url = {https://doi.org/10.3847/1538-4357/abcaa4},
+	year = 2021,
+	month = {jan},
+	publisher = {American Astronomical Society},
+	volume = {906},
+	number = {1},
+	pages = {63},
+	author = {{AMON Collaboration} and {HAWC Collaboration} and {IceCube Collaboration},
+	title = {Multimessenger Gamma-Ray and Neutrino Coincidence Alerts Using {HAWC} and {IceCube} Subthreshold Data},
+	journal = {The Astrophysical Journal}
+}
+
+
+
+@article{IceCube:2020a,
   title = {Characteristics of the Diffuse Astrophysical Electron and Tau Neutrino Flux with Six Years of IceCube High Energy Cascade Data},
   author = {{IceCube Collaboration}},
   journal = {Phys. Rev. Lett.},
@@ -8,6 +24,26 @@
   numpages = {10},
   year = {2020}
 }
+
+@ARTICLE{IceCube:2020b,
+       author = {{IceCube Collaboration}},
+        title = "{Time-Integrated Neutrino Source Searches with 10 Years of IceCube Data}",
+      journal = {\prl},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = feb,
+       volume = {124},
+       number = {5},
+          eid = {051103},
+        pages = {051103},
+          doi = {10.1103/PhysRevLett.124.051103},
+archivePrefix = {arXiv},
+       eprint = {1910.08488},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvL.124e1103A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @INPROCEEDINGS{IceCube:2019a,
        author = {{Schneider}, A. and {IceCube Collaboration}},
@@ -41,3 +77,181 @@ archivePrefix = {arXiv},
  primaryClass = {astro-ph.HE}
 }
 
+@INPROCEEDINGS{IceCube:2019c,
+       author = {{Stachurska}, J. and {IceCube Collaboration}},
+        title = "{First Double Cascade Tau Neutrino Candidates in IceCube and a New Measurement of the Flavor Composition}",
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Experiment},
+    booktitle = {36th International Cosmic Ray Conference (ICRC2019)},
+         year = 2019,
+       series = {International Cosmic Ray Conference},
+       volume = {36},
+        month = jul,
+          eid = {1015},
+        pages = {1015},
+archivePrefix = {arXiv},
+       eprint = {1908.05506},
+ primaryClass = {astro-ph.HE}
+}
+
+
+@ARTICLE{IceCube:2019d,
+       author = {{IceCube Collaboration}},
+        title = "{Search for steady point-like sources in the astrophysical muon neutrino flux with 8 years of IceCube data}",
+      journal = {European Physical Journal C},
+     keywords = {High Energy Physics - Phenomenology, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2019,
+        month = mar,
+       volume = {79},
+       number = {3},
+          eid = {234},
+        pages = {234},
+          doi = {10.1140/epjc/s10052-019-6680-0},
+archivePrefix = {arXiv},
+       eprint = {1811.07979},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019EPJC...79..234A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@article {IceCube:2018a,
+	author = {{The IceCube Collaboration} and {Fermi-LAT} and {MAGIC} and {AGILE} and {ASAS-SN} and {HAWC} and {H.E.S.S.} and {INTEGRAL} and {Kanata} and {Kiso} and {Kapteyn} and {Liverpool Telescope} and {Subaru} and {Swift/NuSTAR} and {VERITAS} and {VLA/17B-403 teams}},
+	title = {Multimessenger observations of a flaring blazar coincident with high-energy neutrino IceCube-170922A},
+	volume = {361},
+	number = {6398},
+	elocation-id = {eaat1378},
+	year = {2018},
+	doi = {10.1126/science.aat1378},
+	publisher = {American Association for the Advancement of Science},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/361/6398/eaat1378},
+	eprint = {https://science.sciencemag.org/content/361/6398/eaat1378.full.pdf},
+	journal = {Science}
+}
+
+@article {IceCube:2018b,
+	author = {{IceCube Collaboration}},
+	title = {Neutrino emission from the direction of the blazar TXS 0506+056 prior to the IceCube-170922A alert},
+	volume = {361},
+	number = {6398},
+	pages = {147--151},
+	year = {2018},
+	doi = {10.1126/science.aat2890},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/361/6398/147},
+	eprint = {https://science.sciencemag.org/content/361/6398/147.full.pdf},
+	journal = {Science}
+}
+
+@ARTICLE{IceCube:2017a,
+       author = {{IceCube Collaboration}},
+        title = "{The Contribution of Fermi-2LAC Blazars to Diffuse TeV-PeV Neutrino Flux}",
+      journal = {\apj},
+     keywords = {astroparticle physics, BL Lacertae objects: general, gamma rays: galaxies, methods: data analysis, neutrinos, quasars: general, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Experiment},
+         year = 2017,
+        month = jan,
+       volume = {835},
+       number = {1},
+          eid = {45},
+        pages = {45},
+          doi = {10.3847/1538-4357/835/1/45},
+archivePrefix = {arXiv},
+       eprint = {1611.03874},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...835...45A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{HAWC:2018,
+       author = {{Taboada}, Ignacio and {Tung}, Chun Fai and {Wood}, Joshua},
+        title = "{Constrains on the extragalactic origin of IceCube's neutrinos using HAWC}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2018,
+        month = jan,
+          eid = {arXiv:1801.09545},
+        pages = {arXiv:1801.09545},
+archivePrefix = {arXiv},
+       eprint = {1801.09545},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018arXiv180109545T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{IceCube:2015,
+       author = {{IceCube Collaboration}},
+        title = "{Search for Prompt Neutrino Emission from Gamma-Ray Bursts with IceCube}",
+      journal = {\apjl},
+     keywords = {gamma-ray burst: general, neutrinos, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2015,
+        month = may,
+       volume = {805},
+       number = {1},
+          eid = {L5},
+        pages = {L5},
+          doi = {10.1088/2041-8205/805/1/L5},
+archivePrefix = {arXiv},
+       eprint = {1412.6510},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...805L...5A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{MuraseWaxman:2016,
+       author = {{Murase}, Kohta and {Waxman}, Eli},
+        title = "{Constraining high-energy cosmic neutrino sources: Implications and prospects}",
+      journal = {Phys.Rev.D},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
+         year = 2016,
+        month = nov,
+       volume = {94},
+       number = {10},
+          eid = {103006},
+        pages = {103006},
+          doi = {10.1103/PhysRevD.94.103006},
+archivePrefix = {arXiv},
+       eprint = {1607.01601},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016PhRvD..94j3006M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Kowalski:2014,
+       author = {{Kowalski}, Marek},
+        title = "{Status of High-Energy Neutrino Astronomy}",
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
+    booktitle = {Journal of Physics Conference Series},
+         year = 2015,
+       series = {Journal of Physics Conference Series},
+       volume = {632},
+        month = aug,
+          eid = {012039},
+        pages = {012039},
+          doi = {10.1088/1742-6596/632/1/012039},
+archivePrefix = {arXiv},
+       eprint = {1411.4385},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015JPhCS.632a2039K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{FiresongCTA:2019,
+      author         = {{Satalecka}, K and {Brown}, A. and {Rosales de león}, A. and {Sergijenko}, O. and {Tung}, C.~F. and {Reimann}, R and {Glauch}, T. and {Taboada}, I},
+      title          = "{Neutrino Target of Opportunity program of the Cherenkov Telescope Array}",
+      collaboration  = "CTA",
+      journal        = "PoS",
+      volume         = "ICRC2019",
+      pages          = "784",
+      year           = "2019",
+}
+
+@misc{cosmolopy,
+  author = {{Hultman Kramer}, Roban},
+  title = {{Cosmolopy}},
+  howpublished = "\url{https://github.com/roban/CosmoloPy}",
+  year = {2009},
+}
