--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -7,7 +7,7 @@
 	volume = {906},
 	number = {1},
 	pages = {63},
-	author = {{AMON Collaboration} and {HAWC Collaboration} and {IceCube Collaboration},
+	author = {{AMON Collaboration} and {HAWC Collaboration} and {IceCube Collaboration}},
 	title = {Multimessenger Gamma-Ray and Neutrino Coincidence Alerts Using {HAWC} and {IceCube} Subthreshold Data},
 	journal = {The Astrophysical Journal}
 }
