Fix comments by Alex. Fix bibliography journals.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -15,7 +15,7 @@
 @article{IceCube:2020a,
   title = {Characteristics of the Diffuse Astrophysical Electron and Tau Neutrino Flux with Six Years of IceCube High Energy Cascade Data},
   author = {{IceCube Collaboration}},
-  journal = {Phys. Rev. Lett.},
+  journal = {Physical Review Letters},
   volume = {125},
   issue = {12},
   pages = {121104},
@@ -26,7 +26,7 @@
 @ARTICLE{IceCube:2020b,
        author = {{IceCube Collaboration}},
         title = "{Time-Integrated Neutrino Source Searches with 10 Years of IceCube Data}",
-      journal = {\prl},
+      journal = {Physical Review Letters},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena},
          year = 2020,
         month = feb,
@@ -37,9 +37,7 @@
           doi = {10.1103/PhysRevLett.124.051103},
 archivePrefix = {arXiv},
        eprint = {1910.08488},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvL.124e1103A},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+ primaryClass = {astro-ph.HE}
 }
 
 @INPROCEEDINGS{IceCube:2019a,
@@ -111,7 +109,7 @@ archivePrefix = {arXiv},
 }
 
 @article {IceCube:2018a,
-	author = {{The IceCube Collaboration} and {Fermi-LAT} and {MAGIC} and {AGILE} and {ASAS-SN} and {HAWC} and {H.E.S.S.} and {INTEGRAL} and {Kanata} and {Kiso} and {Kapteyn} and {Liverpool Telescope} and {Subaru} and {Swift/NuSTAR} and {VERITAS} and {VLA/17B-403 teams}},
+	author = {{IceCube Collaboration} and {Fermi-LAT} and {MAGIC} and {AGILE} and {ASAS-SN} and {HAWC} and {H.E.S.S.} and {INTEGRAL} and {Kanata} and {Kiso} and {Kapteyn} and {Liverpool Telescope} and {Subaru} and {Swift/NuSTAR} and {VERITAS} and {VLA/17B-403 teams}},
 	title = {Multimessenger observations of a flaring blazar coincident with high-energy neutrino IceCube-170922A},
 	volume = {361},
 	number = {6398},
@@ -142,7 +140,7 @@ archivePrefix = {arXiv},
 @ARTICLE{IceCube:2017a,
        author = {{IceCube Collaboration}},
         title = "{The Contribution of Fermi-2LAC Blazars to Diffuse TeV-PeV Neutrino Flux}",
-      journal = {\apj},
+      journal = {The Astrophysical Journal},
      keywords = {astroparticle physics, BL Lacertae objects: general, gamma rays: galaxies, methods: data analysis, neutrinos, quasars: general, Astrophysics - High Energy Astrophysical Phenomena, High Energy Physics - Experiment},
          year = 2017,
         month = jan,
@@ -158,26 +156,36 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{HAWC:2018,
-       author = {{Taboada}, Ignacio and {Tung}, Chun Fai and {Wood}, Joshua},
+@INPROCEEDINGS{HAWC:2018,
+       author = {{Taboada}, Ignacio and {Tung}, Chun Fai and {Wood}, Joshua and {HAWC collaboration}},
         title = "{Constrains on the extragalactic origin of IceCube's neutrinos using HAWC}",
-      journal = {arXiv e-prints},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena},
          year = 2018,
-        month = jan,
-          eid = {arXiv:1801.09545},
-        pages = {arXiv:1801.09545},
+       series = {38th International Cosmic Ray Conference (ICRC2017)},
 archivePrefix = {arXiv},
-       eprint = {1801.09545},
- primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2018arXiv180109545T},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+       eprint = {1801.09545}
 }
+
+@INPROCEEDINGS{IceCube:2019b,
+       author = {{Stettner}, J. and {IceCube Collaboration}},
+        title = "{Measurement of the diffuse astrophysical muon-neutrino spectrum with ten years of IceCube data}",
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+    booktitle = {36th International Cosmic Ray Conference (ICRC2019)},
+         year = 2019,
+       series = {International Cosmic Ray Conference},
+       volume = {36},
+        month = jul,
+          eid = {1017},
+        pages = {1017},
+archivePrefix = {arXiv},
+       eprint = {1908.09551}
+}
+
 
 @ARTICLE{IceCube:2015,
        author = {{IceCube Collaboration}},
         title = "{Search for Prompt Neutrino Emission from Gamma-Ray Bursts with IceCube}",
-      journal = {\apjl},
+      journal = {The Astrophysical Journal Letters},
      keywords = {gamma-ray burst: general, neutrinos, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2015,
         month = may,
@@ -196,7 +204,7 @@ archivePrefix = {arXiv},
 @ARTICLE{MuraseWaxman:2016,
        author = {{Murase}, Kohta and {Waxman}, Eli},
         title = "{Constraining high-energy cosmic neutrino sources: Implications and prospects}",
-      journal = {Phys.Rev.D},
+      journal = {Physical Review D},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology},
          year = 2016,
         month = nov,
@@ -232,10 +240,10 @@ archivePrefix = {arXiv},
 }
 
 @article{FiresongCTA:2019,
-      author         = {{Satalecka}, K and {Brown}, A. and {Rosales de león}, A. and {Sergijenko}, O. and {Tung}, C.~F. and {Reimann}, R and {Glauch}, T. and {Taboada}, I},
+      author         = {{Satalecka}, K and {Brown}, A. and {Rosales de león}, A. and {Sergijenko}, O. and {CTA collaboration} and {Tung}, C.~F. and {Reimann}, R and {Glauch}, T. and {Taboada}, I},
       title          = "{Neutrino Target of Opportunity program of the Cherenkov Telescope Array}",
       collaboration  = "CTA",
-      journal        = "PoS",
+      journal        = "Proceedings of Science (PoS)",
       volume         = "ICRC2019",
       pages          = "784",
       year           = "2019",
