--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -14,6 +14,7 @@
 
 @article{IceCube:2020a,
   title = {Characteristics of the Diffuse Astrophysical Electron and Tau Neutrino Flux with Six Years of IceCube High Energy Cascade Data},
+  doi = {10.1103/PhysRevLett.125.121104},
   author = {{IceCube Collaboration}},
   journal = {Physical Review Letters},
   volume = {125},
@@ -51,6 +52,7 @@ archivePrefix = {arXiv},
         month = jul,
           eid = {1004},
         pages = {1004},
+	  doi = {10.22323/1.358.1004},
 archivePrefix = {arXiv},
        eprint = {1907.11266},
  primaryClass = {astro-ph.HE}
@@ -67,6 +69,7 @@ archivePrefix = {arXiv},
         month = jul,
           eid = {1017},
         pages = {1017},
+	  doi = {10.22323/1.358.1017},
 archivePrefix = {arXiv},
        eprint = {1908.09551},
  primaryClass = {astro-ph.HE}
@@ -83,6 +86,7 @@ archivePrefix = {arXiv},
         month = jul,
           eid = {1015},
         pages = {1015},
+	  doi = {10.22323/1.358.1015},
 archivePrefix = {arXiv},
        eprint = {1908.05506},
  primaryClass = {astro-ph.HE}
@@ -163,6 +167,7 @@ archivePrefix = {arXiv},
          year = 2018,
        series = {38th International Cosmic Ray Conference (ICRC2017)},
 archivePrefix = {arXiv},
+          doi = {10.22323/1.301.0663},
        eprint = {1801.09545}
 }
 
@@ -177,6 +182,7 @@ archivePrefix = {arXiv},
         month = jul,
           eid = {1017},
         pages = {1017},
+	  doi = {10.22323/1.358.1017},
 archivePrefix = {arXiv},
        eprint = {1908.09551}
 }
