--- a/notebooks/Firesong tutorial.ipynb
+++ b/notebooks/Firesong tutorial.ipynb
@@ -207,8 +207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As is evident in the plot above, for Standard candle sources, the flux is solely determined by the Redshift.\n",
-    "For LogNoramlly distributed sources, there is spread around this value, with a width determined by `sigma`, while preserving the redshift distribution."
+    "As is evident in the plot above, for Standard Candle sources, the flux is solely determined by the redshift.\n",
+    "For LogNormally distributed sources, there is spread around this value, with a width determined by `sigma`, while preserving the redshift distribution."
    ]
   },
   {
