--- a/notebooks/FluxPDF Example.ipynb
+++ b/notebooks/FluxPDF Example.ipynb
@@ -31,14 +31,14 @@
    "metadata": {},
    "source": [
     "## FluxPDF\n",
-    "When simulating very large densities, it is cumbersome to look at the specifics of each source. However, it is still possible to extract some of the most important distributions from an observational perspective: for example, the $\\log(N) - \\log(S)$ which describes the number of sources as a function of the flux on Earth"
+    "When simulating very large densities, it is cumbersome to look at the specifics of each source. However, it is still possible to extract some of the most important distributions from an observational perspective: for example, the $\\log(N) - \\log(S)$ distribution which describes the number of sources as a function of the flux on Earth."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we show how the two approaches – `Firesong.py` and `FluxPDF.py` – recover the same results for the same sets of physics parameters"
+    "First, we show how the two approaches – `Firesong.py` and `FluxPDF.py` – recover the same results for the same sets of physics parameters:"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This plot shows the number of sources above a given flux threshold for three different densities, calculated by integrating the results from a `FluxPDF`"
+    "This plot shows the number of sources above a given flux threshold for three different densities, calculated by integrating the results from a `FluxPDF`."
    ]
   },
   {
@@ -180,11 +180,11 @@
    "source": [
     "Just as in `Firesong.py`, you can pass a variety of arguments to `FluxPDF`, including:\n",
     "* `Evolution`\n",
-    "* `Luminosity`\n",
-    "* density\n",
+    "* `luminosity`\n",
+    "* `density`\n",
     "* Transient vs. steady sources (transient sources have an associated `timescale`)\n",
     "\n",
-    "This list is not exhaustive. Please see the [API documentation](https://icecube.github.io/FIRESONG/) for the complete list of arguments"
+    "This list is not exhaustive. Please see the [API documentation](https://icecube.github.io/FIRESONG/) for the complete list of arguments."
    ]
   }
  ],
