fix typos, complete arXiv ID, add mpl import

--- a/notebooks/Legend Example.ipynb
+++ b/notebooks/Legend Example.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -28,8 +29,8 @@
    "metadata": {},
    "source": [
     "# LEGEND\n",
-    "For some sources, their distribution depends on both redshift and the soure luminosity. Legend is designed for generating this type of sources.\n",
-    "I will use the Luminosity-Dependent-Density-Evolution (LDDE) model of Blazars (https://arxiv.org/pdf/1012.1247.pdf) (https://arxiv.org/pdf/1206.4734.pdf), which will be referred as the HA2014 model, as an example. This model has been implmented in Firesong."
+    "For some sources, their distribution depends on both redshift and the source luminosity. Legend is designed for generating this type of sources.\n",
+    "I will use the Luminosity-Dependent-Density-Evolution (LDDE) model of Blazars ([arXiv:1012.1247](https://arxiv.org/pdf/1012.1247.pdf), [arXiv:1206.4734](https://arxiv.org/pdf/1206.4734.pdf)), which will be referred to as the HA2014 model, as an example. This model has been implemented in Firesong."
    ]
   },
   {
